[package]
name = "smredir"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
pcsc = "2.9.0"
tokio = {  version = "1.47.1", features = ["full"] }
usbip = {  version = "0.7.1", path = "../usbip" }
log = "0.4.27"
thiserror = "2.0.16"
byteorder = "1.5.0"
nusb = "0.1.10"
num-traits = "0.2.19"
chrono = "0.4.42"
